--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
   const holes = document.querySelectorAll('.hole');
   const scoreBoard = document.querySelector('.score');
   const moles = document.querySelectorAll('.mole');
+  let lastHole;
+  let timeUp = false;
+  let score = 0;
+
 
 </script>
 </body>
