--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
   let timeUp = false;
   let score = 0;
 
+  function randomTime(min, max) {
+    return Math.round(Math.random() * (max - min) + min);
+  }
+
+  
+
 
 </script>
 </body>
