--- a/index.html
+++ b/index.html
@@ -44,7 +44,13 @@
     return Math.round(Math.random() * (max - min) + min);
   }
 
+  function randomHole(holes) {
+    const idx = Math.floor(Math.random() * holes.length);
+    const hole = holes[idx];
+
+  }
   
+
 
 
 </script>
