Set when the mole peeks up and down

--- a/index.html
+++ b/index.html
@@ -48,12 +48,22 @@
     const idx = Math.floor(Math.random() * holes.length);
     const hole = holes[idx];
     if (hole === lastHole) {
-      console.log('Ah nah thats the same one bud');
+      console.log('Ah nah that is the same one bud');
       return randomHole(holes);
     }
     lastHole = hole;
     return hole;
   }
+
+  function peep() {
+    const time = randomTime(200, 1000);
+    const hole = randomHole(holes);
+    hole.classList.add('up');
+    setTimeout(() => {
+      hole.classList.remove('up');
+      if (!timeUp) peep();
+    }, time);
+  }  
   
 
 
